# py5-sandbox

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
src/: first_sketch.py  lines_sketch_a.py  main.py  utils.py
src/creativecoding-book/: README.md
src/creativecoding-book/02_animation/: animation_a.py
